homepage Manque Le coeur qui se remplit.

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
   <nav class="nav">
     <h2 class="nav__header">Fonctionnement</h2>
     <ol>
-      <li class="row">
+      <li class="row nav__li">
         <button class="nav__button">1</button>
         <div class="nav__picto"><i class="fas fa-mobile-alt "></i></div>
         <p>Chose a restaurant<p>
       </li>
-      <li class="row">
+      <li class="row nav__li">
         <button class="nav__button">2</button>
         <div class="nav__picto"><i class="fas fa-bars"></i></div>
         <p>Create your menu</p>
       </li>
-      <li class="row">
+      <li class="row nav__li">
         <button class="nav__button">3</button>
         <div class="nav__picto"><i class="fas fa-store"></i></div>
         <p>Go enjoy it at the restaurant</p>
@@ -51,7 +51,7 @@
           <h4 class="card__h4">La palette du goût</h4>
           <p class="card__p">Ménilmontant</p>
         </div>
-        <div class=" row justify-content__center card__picto"><i class="far fa-heart"></i></div>
+        <div class=" row justify-content__center card__picto"><i class="far fa-heart"></i></i></div>
       </div>
     </div>
     <div class="card">
