homepage avec coeur qui se colore mais pasprogressivement

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
           <h4 class="card__h4">La palette du goût</h4>
           <p class="card__p">Ménilmontant</p>
         </div>
-        <div class=" row justify-content__center card__picto"><i class="far fa-heart"></i></i></div>
+        <div class="card__picto row justify-content__center"><i class=" far fa-heart"></i></div>
+        <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
       </div>
     </div>
     <div class="card">
@@ -62,6 +63,7 @@
           <p class="card__p">Charonne</p>
         </div>
         <div class=" row justify-content__center card__picto"><i class="far fa-heart"></i></div>
+        <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
       </div>
     </div>
     <div class="card">
@@ -72,6 +74,7 @@
           <p class="card__p">Cité Rouge</p>
         </div>
         <div class="row justify-content__center card__picto"><i class="far fa-heart"></i></div>
+        <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
       </div>
     </div>
     <div class="card">
@@ -82,6 +85,7 @@
           <p class="card__p">Folie-Méricout</p>
         </div>
         <div class="row justify-content__center card__picto"><i class="far fa-heart"></i></div>
+        <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
       </div>
     </div>
   </section>
