Click validation plat commencer

--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
       <li class="row nav__li">
         <button class="nav__button">1</button>
         <div class="nav__picto"><i class="fas fa-mobile-alt "></i></div>
-        <p>Chose a restaurant<p>
+        <p>Choisissez un restaurant<p>
       </li>
       <li class="row nav__li">
         <button class="nav__button">2</button>
         <div class="nav__picto"><i class="fas fa-bars"></i></div>
-        <p>Create your menu</p>
+        <p>Composez votre menu</p>
       </li>
       <li class="row nav__li">
         <button class="nav__button">3</button>
         <div class="nav__picto"><i class="fas fa-store"></i></div>
-        <p>Go enjoy it at the restaurant</p>
+        <p>Dégustez au restaurant</p>
       </li>
     </ol>
   </nav>
@@ -51,8 +51,10 @@
           <h4 class="card__h4">La palette du goût</h4>
           <p class="card__p">Ménilmontant</p>
         </div>
-        <div class="card__picto row justify-content__center"><i class=" far fa-heart"></i></div>
-        <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
+        <div class="testanimation">
+          <div class="card__picto row justify-content__center"><i class=" far fa-heart"></i></div>
+          <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
+        </div>
       </div>
     </div>
     <div class="card">
@@ -62,8 +64,10 @@
           <h4 class="card__h4">La note enchantée</h4>
           <p class="card__p">Charonne</p>
         </div>
-        <div class=" row justify-content__center card__picto"><i class="far fa-heart"></i></div>
-        <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
+        <div class="testanimation">
+          <div class="card__picto row justify-content__center"><i class=" far fa-heart"></i></div>
+          <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
+        </div>
       </div>
     </div>
     <div class="card">
@@ -73,8 +77,10 @@
           <h4 class="card__h4">A la française</h4>
           <p class="card__p">Cité Rouge</p>
         </div>
-        <div class="row justify-content__center card__picto"><i class="far fa-heart"></i></div>
-        <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
+        <div class="testanimation">
+          <div class="card__picto row justify-content__center"><i class=" far fa-heart"></i></div>
+          <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
+        </div>
       </div>
     </div>
     <div class="card">
@@ -84,8 +90,10 @@
           <h4 class="card__h4">Le délice des sens</h4>
           <p class="card__p">Folie-Méricout</p>
         </div>
-        <div class="row justify-content__center card__picto"><i class="far fa-heart"></i></div>
-        <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
+        <div class="testanimation">
+          <div class="card__picto row justify-content__center"><i class=" far fa-heart"></i></div>
+          <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
+        </div>
       </div>
     </div>
   </section>
