--- a/menu_a_la_francaise.html
+++ b/menu_a_la_francaise.html
@@ -11,76 +11,41 @@
 </head>
 <body>
   <header class="header">
-    <img src="public/images/logo/ohmyfood.png" class="header__img"></img>
-      <div class="row header__background header__center">
-        <div class="header__picto"><i class="fas fa-map-marker-alt"></i></div>
-        <p>Paris,Belleville<p>
-    </div>
-    <div class=" header__background--greyLight">
-      <h2 class="header__centerText">Book the menu you like</h2>
-      <p class="header__centerText">Discover top-of-the-art restaurants we</br> picked for you</p>
-      <button class="header__btn ">Explore our restaurants</button>
-    </div>
+     <div class="row justify-content__center">
+      <i style="display: flex; align-items: center; position:relative; left:-58px" class="fas fa-arrow-left"></i>  
+      <img src="public/images/logo/ohmyfood.png" class="header__img"></img>
+     </div>
+    <img src="public\images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" style="width: 100%; height: 250px ;object-fit: cover;" class=""></img>
   </header>
-  <nav class="nav">
-    <h2>How it works</h2>
-    <ol>
-      <li class="row">
-        <div class="nav__picto"><i class="fas fa-mobile-alt "></i></div>
-        <p>Chose a restaurant<p>
-      </li>
-      <li class="row">
-        <div class="nav__picto"><i class="fas fa-bars"></i></div>
-        <p>Create your menu</p>
-      </li>
-      <li class="row">
-        <div class="nav__picto"><i class="fas fa-store"></i></div>
-        <p>Go enjoy it at the restaurant</p>
-      </li>
-    </ol>
-  </nav>
-  <section>
-    <h2>Restaurants</h2>
-    <div class="card">
-      <img src="public\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="card__img"></img>
-      <div class="row justify-content__around">
-        <div>
-          <h4 class="card__h4">The Full Palette</h4>
-          <p class="card__p"> New York</p>
-        </div>
-        <div class="card__picto"><i class="far fa-heart"></i></div>
-      </div>
+  <section class="menu">
+    <div class="row justify-content__between">
+      <h2>A la francaise </h2>
+      <div class="card__picto row justify-content__center"><i class=" far fa-heart"></i></div>
     </div>
-    <div class="card">
-      <img src="public\images\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" class="card__img"></img>
-      <div class="row justify-content__around">
+    <h3 class="menu__titre">ENTREES</h3>
+    <hr/>
+    <div class="card-Menu justify-content__between">
         <div>
-          <h4 class="card__h4">The Enchanted Plate</h4>
-          <p class="card__p"> New York</p>
+          <h4 class="card__h4">Tartare de poulpe acidulé </h4>
+          <p class="card__p">Aux zests d'orange </p>
         </div>
-        <div class="card__picto"><i class="far fa-heart"></i></div>
-      </div>
+        <span class="card-Menu__price">25€</span>
+        <div class="rotate"></div>
     </div>
-    <div class="card">
-      <img src="public\images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="card__img"></img>
-      <div class="row justify-content__around">
+      <div class="card-Menu justify-content__between">
         <div>
-          <h4 class="card__h4">Bastille</h4>
-          <p class="card__p"> New York</p>
+          <h4 class="card__h4">Velouté de légumes d'antan</h4>
+          <p class="card__p"> Carotte, panais, topinambour</p>
         </div>
-        <div class="card__picto"><i class="far fa-heart"></i></div>
+        <span class="card-Menu__price">35€</span>
       </div>
-    </div>
-    <div class="card">
-      <img src="public\images\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="card__img"></img>
-      <div class="row justify-content__around">
+      <div class="card-Menu justify-content__between">
         <div>
-          <h4 class="card__h4">Le Gourmand</h4>
-          <p class="card__p">New York</p>
+          <h4 class="card__h4">Soupe à l'oignon</h4>
+          <p class="card__p"> Revisitée</p>
         </div>
-        <div class="card__picto"><i class="far fa-heart"></i></div>
+        <span class="card-Menu__price">25€</span>
       </div>
-    </div>
   </section>
   <footer class="footer">
     <img src="public\images\logo\ohmyfood@2x.svg" class="footer__img"></img>
