--- a/menu_de_la_note_enchantee.html
+++ b/menu_de_la_note_enchantee.html
@@ -21,7 +21,7 @@
 
   <section class="menu">
     <div class="card card--modif row justify-content__between">
-      <h2 class="menu__h2">A la francaise </h2>
+      <h2 class="menu__h2">La note enchantée </h2>
       <div class="testanimation">
         <div class="card__picto row justify-content__center"><i class=" far fa-heart"></i></div>
         <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
@@ -34,9 +34,9 @@
       <hr/>
       <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
         <div class="card-Menu__body">
-          <h4 class="card__h4">Tartare de poulpe acidulé </h4>
+          <h4 class="card__h4">Ravioles de foie gras </h4>
           <div class="row justify-content__between">
-            <p class="card-Menu__p">Aux zests d'orange </p>
+            <p class="card-Menu__p">Accompagnés de leur créme à la truffe</p>
             <span class="card-Menu__price">25€</span>
           </div>
         </div>
@@ -46,9 +46,9 @@
       </div>
       <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
       <div class="card-Menu__body">
-        <h4 class="card__h4">Velouté de légumes d'antan</h4>
+        <h4 class="card__h4">Caviar osciètre</h4>
         <div class="row justify-content__between">
-          <p class="card-Menu__p">Carotte, panais, topinambour </p>
+          <p class="card-Menu__p">Sur blini à la farine de blé noir</p>
           <span class="card-Menu__price">35€</span>
         </div>
         </div>
@@ -58,9 +58,9 @@
       </div>
       <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
     <div class="card-Menu__body">
-      <h4 class="card__h4">Soupe à l'oignon </h4>
+      <h4 class="card__h4">Homard et espuma de marquereau</h4>
       <div class="row justify-content__between">
-        <p class="card-Menu__p">Revisitée </p>
+        <p class="card-Menu__p">Mariné au zests d'orange </p>
         <span class="card-Menu__price">25€</span>
       </div>
     </div>
@@ -68,6 +68,18 @@
       <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
     </div>
       </div>
+      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+        <div class="card-Menu__body">
+          <h4 class="card__h4">Foie gras de canard cuit entier</h4>
+          <div class="row justify-content__between">
+            <p class="card-Menu__p">Confiture de figue et pain toasté</p>
+            <span class="card-Menu__price">35€</span>
+          </div>
+        </div>
+        <div class="rotate">
+          <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+        </div>
+          </div>
    </article>
     <!---------------plat-->
    <article class="card-Menu--anim-1">
@@ -75,9 +87,9 @@
      <hr/>
      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
         <div class="card-Menu__body">
-          <h4 class="card__h4">Coquilles Saint-Jacques</h4>
+          <h4 class="card__h4">Noix de coquilles Saint-jacques</h4>
           <div class="row justify-content__between">
-            <p class="card-Menu__p">Accompagnées d'une purée de panais</p>
+            <p class="card-Menu__p">Sur lit de purée de céleri-rave</p>
             <span class="card-Menu__price">40€</span>
           </div>
         </div>
@@ -87,9 +99,9 @@
      </div>
      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
       <div class="card-Menu__body">
-        <h4 class="card__h4">Magret de canard </h4>
+        <h4 class="card__h4">Langoustine poêlée</h4>
         <div class="row justify-content__between">
-          <p class="card-Menu__p">Et parmentier de pommes de terres</p>
+          <p class="card-Menu__p">Purée de patate douce</p>
           <span class="card-Menu__price">35€</span>
         </div>
       </div>
@@ -99,9 +111,9 @@
      </div>
      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
     <div class="card-Menu__body">
-      <h4 class="card__h4">Pigeonneau d'Ille-et-Vilaine </h4>
+      <h4 class="card__h4">Mijoté de queue de boeuf</h4>
       <div class="row justify-content__between">
-        <p class="card-Menu__p">Sur sont lit de gnocchis aux légumes </p>
+        <p class="card-Menu__p">Et riz sauvage aux zests de citron</p>
         <span class="card-Menu__price">44€</span>
       </div>
     </div>
@@ -116,9 +128,9 @@
      <hr/>
      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
         <div class="card-Menu__body">
-          <h4 class="card__h4">Pétales de violettes glacés</h4>
+          <h4 class="card__h4">Macaron noisette et chocolat</h4>
           <div class="row justify-content__between">
-            <p class="card-Menu__p">Et purée de noisettes</p>
+            <p class="card-Menu__p">Glace au caramel brun et sel de guérande</p>
             <span class="card-Menu__price">18€</span>
           </div>
         </div>
@@ -128,9 +140,9 @@
      </div>
      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
       <div class="card-Menu__body">
-        <h4 class="card__h4">Fondant au chocolat </h4>
+        <h4 class="card__h4">Baba au rhum revisité</h4>
         <div class="row justify-content__between">
-          <p class="card-Menu__p">Révisité</p>
+          <p class="card-Menu__p">Avec son coulis de citron</p>
           <span class="card-Menu__price">22€</span>
         </div>
       </div>
@@ -140,9 +152,9 @@
      </div>
      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
     <div class="card-Menu__body">
-      <h4 class="card__h4">Millefeuille croustillant</h4>
+      <h4 class="card__h4">Tarte au citron meringuée</h4>
       <div class="row justify-content__between">
-        <p class="card-Menu__p">Myrtilles est pate d'amande</p>
+        <p class="card-Menu__p">Destructurée</p>
         <span class="card-Menu__price">23€</span>
       </div>
     </div>
