--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
     <script src="https://kit.fontawesome.com/a41e9403cf.js" crossorigin="anonymous"></script>
 
 </head>
-<body>
+<body class="pour-animation">
+<div class="loader"></div>
+<div class="bar">
+  <div class="bar2"></div>
+</div>
+
+<div class="X">
   <header class="header">
     <img src="public/images/logo/ohmyfood.png" class="header__img"></img>
       <div class="row header__background header__center">
         <div class="header__picto"><i class="fas fa-map-marker-alt"></i></div>
-        <p>Paris, Belleville<p>
+        <p>Paris, Belleville</p>
     </div>
     <div class=" header__background--greyLight">
       <h2 class="header__titre">Réservez le menu qui vous convient</h2>
@@ -44,7 +50,8 @@
   </nav>
   <section>
     <h2>Restaurants</h2>
-    <div class="card">
+    <div class="carte-restaurant">
+    <a href="C:\Users\k335\Documents\workspace\OpenClassRooms\Projet3\menu_de_la_palette_du_gout.html" class="card">
       <img src="public\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="card__img"></img>
       <div class="row card__body justify-content__between">
         <div>
@@ -56,8 +63,8 @@
           <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
         </div>
       </div>
-    </div>
-    <div class="card">
+    </a>
+    <a href="C:\Users\k335\Documents\workspace\OpenClassRooms\Projet3\menu_de_la_note_enchantee.html" class="card">
       <img src="public\images\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" class="card__img"></img>
       <div class="row card__body justify-content__between">
         <div>
@@ -69,8 +76,8 @@
           <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
         </div>
       </div>
-    </div>
-    <div class="card">
+    </a>
+    <a href="C:\Users\k335\Documents\workspace\OpenClassRooms\Projet3\menu_a_la_francaise.html" class="card">
       <img src="public\images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="card__img"></img>
       <div class="row card__body justify-content__between">
         <div>
@@ -82,8 +89,8 @@
           <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
         </div>
       </div>
-    </div>
-    <div class="card">
+    </a>
+    <a href="C:\Users\k335\Documents\workspace\OpenClassRooms\Projet3\menu_le_delice_des_sens.html" class="card">
       <img src="public\images\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="card__img"></img>
       <div class="row card__body justify-content__between">
         <div>
@@ -95,7 +102,8 @@
           <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
         </div>
       </div>
-    </div>
+    </a>
+  </div>
   </section>
   <footer class="footer">
     <img src="public\images\logo\ohmyfood@2x.svg" class="footer__img"></img>
@@ -109,8 +117,9 @@
         Devenenir partenaire
       </li>
       <li>Mention légales</li>
-      <li>Contact</li>
+      <li><a id="mail" href="mailto:contact@ohmyfood.com">Contact</a> </li>
     </ul>
   </footer>
+</div>
 </body>
 </html>
