--- a/menu_le_delice_des_sens.html
+++ b/menu_le_delice_des_sens.html
@@ -21,7 +21,7 @@
 
   <section class="menu">
     <div class="card card--modif row justify-content__between">
-      <h2 class="menu__h2">A la francaise </h2>
+      <h2 class="menu__h2">Le délice des sens </h2>
       <div class="testanimation">
         <div class="card__picto row justify-content__center"><i class=" far fa-heart"></i></div>
         <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
@@ -34,9 +34,9 @@
       <hr/>
       <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
         <div class="card-Menu__body">
-          <h4 class="card__h4">Tartare de poulpe acidulé </h4>
+          <h4 class="card__h4">Tartare de thon</h4>
           <div class="row justify-content__between">
-            <p class="card-Menu__p">Aux zests d'orange </p>
+            <p class="card-Menu__p">Assaisonné au yuzu</p>
             <span class="card-Menu__price">25€</span>
           </div>
         </div>
@@ -46,9 +46,9 @@
       </div>
       <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
       <div class="card-Menu__body">
-        <h4 class="card__h4">Velouté de légumes d'antan</h4>
+        <h4 class="card__h4">Bouchée de homard croustillant</h4>
         <div class="row justify-content__between">
-          <p class="card-Menu__p">Carotte, panais, topinambour </p>
+          <p class="card-Menu__p">Et sa farandole de petits légumes</p>
           <span class="card-Menu__price">35€</span>
         </div>
         </div>
@@ -57,16 +57,16 @@
       </div>
       </div>
       <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-    <div class="card-Menu__body">
-      <h4 class="card__h4">Soupe à l'oignon </h4>
-      <div class="row justify-content__between">
-        <p class="card-Menu__p">Revisitée </p>
-        <span class="card-Menu__price">25€</span>
-      </div>
-    </div>
-    <div class="rotate">
+        <div class="card-Menu__body">
+          <h4 class="card__h4">Velouté de cèpes</h4>
+          <div class="row justify-content__between">
+            <p class="card-Menu__p">Aux truffes</p>
+             <span class="card-Menu__price">20€</span>
+          </div>
+        </div>
+        <div class="rotate">
       <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-    </div>
+        </div>
       </div>
    </article>
     <!---------------plat-->
@@ -75,10 +75,10 @@
      <hr/>
      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
         <div class="card-Menu__body">
-          <h4 class="card__h4">Coquilles Saint-Jacques</h4>
+          <h4 class="card__h4">Poulet rôti aux herbes de provence</h4>
           <div class="row justify-content__between">
-            <p class="card-Menu__p">Accompagnées d'une purée de panais</p>
-            <span class="card-Menu__price">40€</span>
+            <p class="card-Menu__p"> Et sa créme de truffe</p>
+            <span class="card-Menu__price">40</span>
           </div>
         </div>
         <div class="rotate">
@@ -87,9 +87,9 @@
      </div>
      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
       <div class="card-Menu__body">
-        <h4 class="card__h4">Magret de canard </h4>
+        <h4 class="card__h4">Langouste rôtie </h4>
         <div class="row justify-content__between">
-          <p class="card-Menu__p">Et parmentier de pommes de terres</p>
+          <p class="card-Menu__p">Et ses légumes de saison</p>
           <span class="card-Menu__price">35€</span>
         </div>
       </div>
@@ -99,9 +99,9 @@
      </div>
      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
     <div class="card-Menu__body">
-      <h4 class="card__h4">Pigeonneau d'Ille-et-Vilaine </h4>
+      <h4 class="card__h4">Côte de boeuf angus</h4>
       <div class="row justify-content__between">
-        <p class="card-Menu__p">Sur sont lit de gnocchis aux légumes </p>
+        <p class="card-Menu__p">Et sa purée de panais</p>
         <span class="card-Menu__price">44€</span>
       </div>
     </div>
@@ -116,9 +116,9 @@
      <hr/>
      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
         <div class="card-Menu__body">
-          <h4 class="card__h4">Pétales de violettes glacés</h4>
+          <h4 class="card__h4">Farandole de desserts</h4>
           <div class="row justify-content__between">
-            <p class="card-Menu__p">Et purée de noisettes</p>
+            <p class="card-Menu__p">Du chef</p>
             <span class="card-Menu__price">18€</span>
           </div>
         </div>
@@ -128,9 +128,9 @@
      </div>
      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
       <div class="card-Menu__body">
-        <h4 class="card__h4">Fondant au chocolat </h4>
+        <h4 class="card__h4">Crème brulée</h4>
         <div class="row justify-content__between">
-          <p class="card-Menu__p">Révisité</p>
+          <p class="card-Menu__p">Revisitée</p>
           <span class="card-Menu__price">22€</span>
         </div>
       </div>
@@ -140,9 +140,9 @@
      </div>
      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
     <div class="card-Menu__body">
-      <h4 class="card__h4">Millefeuille croustillant</h4>
+      <h4 class="card__h4">Tiramisu</h4>
       <div class="row justify-content__between">
-        <p class="card-Menu__p">Myrtilles est pate d'amande</p>
+        <p class="card-Menu__p">A la noisette</p>
         <span class="card-Menu__price">23€</span>
       </div>
     </div>
