--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <section>
     <h2>Restaurants</h2>
     <div class="carte-restaurant">
-    <a href="C:\Users\k335\Documents\workspace\OpenClassRooms\Projet3\menu_de_la_palette_du_gout.html" class="card">
+    <a href=".\menu_de_la_palette_du_gout.html" class="card">
       <img src="public\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="card__img"></img>
       <div class="row card__body justify-content__between">
         <div>
