--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <section>
     <h2>Restaurants</h2>
     <div class="carte-restaurant">
-    <a href=".\menu_de_la_palette_du_gout.html" class="card">
+    <a href="https://aholouchristopher.github.io/Ohmyfood_Project-3_11112021/menu_de_la_palette_du_gout.html" class="card">
       <img src="public\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="card__img"></img>
       <div class="row card__body justify-content__between">
         <div>
@@ -64,7 +64,7 @@
         </div>
       </div>
     </a>
-    <a href="C:\Users\k335\Documents\workspace\OpenClassRooms\Projet3\menu_de_la_note_enchantee.html" class="card">
+    <a href="https://aholouchristopher.github.io/Ohmyfood_Project-3_11112021/menu_de_la_note_enchantee.html" class="card">
       <img src="public\images\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" class="card__img"></img>
       <div class="row card__body justify-content__between">
         <div>
@@ -77,7 +77,7 @@
         </div>
       </div>
     </a>
-    <a href="C:\Users\k335\Documents\workspace\OpenClassRooms\Projet3\menu_a_la_francaise.html" class="card">
+    <a href="https://aholouchristopher.github.io/Ohmyfood_Project-3_11112021/menu_a_la_francaise.html" class="card">
       <img src="public\images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="card__img"></img>
       <div class="row card__body justify-content__between">
         <div>
@@ -90,7 +90,7 @@
         </div>
       </div>
     </a>
-    <a href="C:\Users\k335\Documents\workspace\OpenClassRooms\Projet3\menu_le_delice_des_sens.html" class="card">
+    <a href="https://aholouchristopher.github.io/Ohmyfood_Project-3_11112021/menu_le_delice_des_sens.html" class="card">
       <img src="public\images\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="card__img"></img>
       <div class="row card__body justify-content__between">
         <div>
