--- a/menu_de_la_note_enchantee.html
+++ b/menu_de_la_note_enchantee.html
@@ -13,7 +13,7 @@
   
   <header class="header">
      <div class="row justify-content__center">
-      <a href="C:\Users\k335\Documents\workspace\OpenClassRooms\Projet3\index.html" style="display: flex; align-items: center; position:relative; left:-58px"><i class="fas fa-arrow-left"></i></a> 
+      <a href=".\index.html" style="display: flex; align-items: center; position:relative; left:-58px"><i class="fas fa-arrow-left"></i></a> 
       <img src="public/images/logo/ohmyfood.png" class="header__img"></img>
      </div>
     <img src="public\images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" style="width: 100%; height: 250px ;object-fit: cover;" class=""></img>
