--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class="X">
   <header class="header">
-    <img src="public/images/logo/ohmyfood.png" class="header__img"></img>
+    <img src="public/images/logo/ohmyfood.png" alt="logo" class="header__img"/>
       <div class="row header__background header__center">
         <div class="header__picto"><i class="fas fa-map-marker-alt"></i></div>
         <p>Paris, Belleville</p>
@@ -52,7 +52,7 @@
     <h2>Restaurants</h2>
     <div class="carte-restaurant">
     <a href="https://aholouchristopher.github.io/Ohmyfood_Project-3_11112021/menu_de_la_palette_du_gout.html" class="card">
-      <img src="public\images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="card__img"></img>
+      <img src="public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="card__img"></img>
       <div class="row card__body justify-content__between">
         <div>
           <h4 class="card__h4">La palette du goût</h4>
