--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h2>Restaurants</h2>
     <div class="carte-restaurant">
     <a href="https://aholouchristopher.github.io/Ohmyfood_Project-3_11112021/menu_de_la_palette_du_gout.html" class="card">
-      <img src="public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="card__img"></img>
+      <img src="public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"  alt="restaurant jay "class="card__img"/>
       <div class="row card__body justify-content__between">
         <div>
           <h4 class="card__h4">La palette du goût</h4>
@@ -65,7 +65,7 @@
       </div>
     </a>
     <a href="https://aholouchristopher.github.io/Ohmyfood_Project-3_11112021/menu_de_la_note_enchantee.html" class="card">
-      <img src="public\images\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" class="card__img"></img>
+      <img src="public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"  alt="restaurant stil" class="card__img"/>
       <div class="row card__body justify-content__between">
         <div>
           <h4 class="card__h4">La note enchantée</h4>
@@ -78,7 +78,7 @@
       </div>
     </a>
     <a href="https://aholouchristopher.github.io/Ohmyfood_Project-3_11112021/menu_a_la_francaise.html" class="card">
-      <img src="public\images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="card__img"></img>
+      <img src="public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant toa" class="card__img"/>
       <div class="row card__body justify-content__between">
         <div>
           <h4 class="card__h4">A la française</h4>
@@ -91,7 +91,7 @@
       </div>
     </a>
     <a href="https://aholouchristopher.github.io/Ohmyfood_Project-3_11112021/menu_le_delice_des_sens.html" class="card">
-      <img src="public\images\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="card__img"></img>
+      <img src="public/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant Louis" class="card__img"/>
       <div class="row card__body justify-content__between">
         <div>
           <h4 class="card__h4">Le délice des sens</h4>
@@ -106,7 +106,7 @@
   </div>
   </section>
   <footer class="footer">
-    <img src="public\images\logo\ohmyfood@2x.svg" class="footer__img"></img>
+    <img src="public/images/logo/ohmyfood@2x.svg"  alt="logo" class="footer__img"/>
     <ul>
       <li class="row">
         <div class="footer__picto"><i class="fas fa-utensils "></i></div>
