--- a/menu_le_delice_des_sens.html
+++ b/menu_le_delice_des_sens.html
@@ -14,9 +14,9 @@
   <header class="header">
      <div class="row justify-content__center">
       <a href="https://aholouchristopher.github.io/Ohmyfood_Project-3_11112021" style="display: flex; align-items: center; position:relative; left:-58px"><i class="fas fa-arrow-left"></i></a> 
-      <img src="public/images/logo/ohmyfood.png" class="header__img"></img>
+      <img src="public/images/logo/ohmyfood.png" alt="logo" class="header__img"/>
      </div>
-    <img src="public\images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" style="width: 100%; height: 250px ;object-fit: cover;" class=""></img>
+    <img src="public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" style="width: 100%; height: 250px ;object-fit: cover;" alt="plat restaurant"/>
   </header>
 
   <section class="menu">
@@ -155,7 +155,7 @@
   </section> 
   <button class="header__btn btn--modif ">Commander</button>
   <footer class="footer">
-    <img src="public\images\logo\ohmyfood@2x.svg" class="footer__img"></img>
+    <img src="public/images/logo/ohmyfood@2x.svg" class="footer__img" alt="logo"/>
     <ul>
       <li class="row">
         <div class="footer__picto"><i class="fas fa-utensils "></i></div>
