--- a/menu_de_la_note_enchantee.html
+++ b/menu_de_la_note_enchantee.html
@@ -13,10 +13,10 @@
   
   <header class="header">
      <div class="row justify-content__center">
-      <a href=".\index.html" style="display: flex; align-items: center; position:relative; left:-58px"><i class="fas fa-arrow-left"></i></a> 
-      <img src="public/images/logo/ohmyfood.png" class="header__img"></img>
+      <a href="./index.html" style="display: flex; align-items: center; position:relative; left:-58px"><i class="fas fa-arrow-left"></i></a> 
+      <img src="public/images/logo/ohmyfood.png" alt="logo" class="header__img"/>
      </div>
-    <img src="public\images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" style="width: 100%; height: 250px ;object-fit: cover;" class=""></img>
+    <img src="public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" style="width: 100%; height: 250px ;object-fit: cover;" alt="plat du restaurant"></img>
   </header>
 
   <section class="menu">
@@ -167,7 +167,7 @@
   </section> 
   <button class="header__btn btn--modif ">Commander</button>
   <footer class="footer">
-    <img src="public\images\logo\ohmyfood@2x.svg" class="footer__img"></img>
+    <img src="public/images/logo/ohmyfood@2x.svg" alt="logo" class="footer__img">
     <ul>
       <li class="row">
         <div class="footer__picto"><i class="fas fa-utensils "></i></div>
