--- a/menu_de_la_note_enchantee.html
+++ b/menu_de_la_note_enchantee.html
@@ -16,7 +16,7 @@
       <a href="./index.html" style="display: flex; align-items: center; position:relative; left:-58px"><i class="fas fa-arrow-left"></i></a> 
       <img src="public/images/logo/ohmyfood.png" alt="logo" class="header__img"/>
      </div>
-    <img src="public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" style="width: 100%; height: 250px ;object-fit: cover;" alt="plat du restaurant"></img>
+    <img src="public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" style="width: 100%; height: 250px ;object-fit: cover;" alt="plat du restaurant"/>
   </header>
 
   <section class="menu">
