--- a/menu_de_la_palette_du_gout.html
+++ b/menu_de_la_palette_du_gout.html
@@ -16,7 +16,7 @@
       <a href="https://aholouchristopher.github.io/Ohmyfood_Project-3_11112021" style="display: flex; align-items: center; position:relative; left:-58px"><i class="fas fa-arrow-left"></i></a> 
       <img src="public/images/logo/ohmyfood.png" class="header__img" alt="logo" />
      </div>
-    <img src="public\images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" style="width: 100%; height: 250px ;object-fit: cover;" alt="plat restaurant"/>
+    <img src="public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" style="width: 100%; height: 250px ;object-fit: cover;" alt="plat restaurant"/>
   </header>
 
   <section class="menu">
