--- a/menu_de_la_palette_du_gout.html
+++ b/menu_de_la_palette_du_gout.html
@@ -155,7 +155,7 @@
   </section> 
   <button class="header__btn btn--modif ">Commander</button>
   <footer class="footer">
-    <img src="public\images\logo\ohmyfood@2x.svg" class="footer__img" alt="logo"/>
+    <img src="public/images/logo/ohmyfood@2x.svg" class="footer__img" alt="logo"/>
     <ul>
       <li class="row">
         <div class="footer__picto"><i class="fas fa-utensils "></i></div>
