Update_index.html
changement X en animation_fadeIn_500ms

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="bar2"></div>
 </div>
 
-<div class="X">
+<div class="animation_fadeIn_500ms">
   <header class="header">
     <img src="public/images/logo/ohmyfood.png" alt="logo" class="header__img"/>
       <div class="row header__background header__center">
