Update_menu_a_la_francaise.html

--- a/menu_a_la_francaise.html
+++ b/menu_a_la_francaise.html
@@ -1,173 +1,170 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="public/css/style.css">
-    <title>ohmyfood</title>
-    <script src="https://kit.fontawesome.com/a41e9403cf.js" crossorigin="anonymous"></script>
-
-</head>
-<body class=container-menu>
-  
-  <header class="header">
-     <div class="row justify-content__center">
-      <a href="https://aholouchristopher.github.io/Ohmyfood_Project-3_11112021/" style="display: flex; align-items: center; position:relative; left:-58px"><i class="fas fa-arrow-left"></i></a> 
-      <img src="public/images/logo/ohmyfood.png" alt="logo" class="header__img"/>
-     </div>
-    <img src="public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat restaurant" style="width: 100%; height: 250px ;object-fit: cover;"/>
-  </header>
-
-  <section class="menu">
-    <div class="card card--modif row justify-content__between">
-      <h2 class="menu__h2">A la francaise </h2>
-      <div class="testanimation">
-        <div class="card__picto row justify-content__center"><i class=" far fa-heart"></i></div>
-        <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
-      </div>
-    </div>
-    <!---entrée-->
-  <div class="plat-menu">
-   <article style class="card-Menu--anim-0">
-      <h3 class="menu__titre">ENTREES</h3>
-      <hr/>
-      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-        <div class="card-Menu__body">
-          <h4 class="card__h4">Tartare de poulpe acidulé </h4>
-          <div class="row justify-content__between">
-            <p class="card-Menu__p">Aux zests d'orange </p>
-            <span class="card-Menu__price">25€</span>
-          </div>
-        </div>
-        <div class="rotate">
-          <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-        </div>
-      </div>
-      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-      <div class="card-Menu__body">
-        <h4 class="card__h4">Velouté de légumes d'antan</h4>
-        <div class="row justify-content__between">
-          <p class="card-Menu__p">Carotte, panais, topinambour </p>
-          <span class="card-Menu__price">35€</span>
-        </div>
-        </div>
-        <div class="rotate">
-        <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-      </div>
-      </div>
-      <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-    <div class="card-Menu__body">
-      <h4 class="card__h4">Soupe à l'oignon </h4>
-      <div class="row justify-content__between">
-        <p class="card-Menu__p">Revisitée </p>
-        <span class="card-Menu__price">25€</span>
-      </div>
-    </div>
-    <div class="rotate">
-      <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-    </div>
-      </div>
-   </article>
-    <!---------------plat-->
-   <article class="card-Menu--anim-1">
-     <h3 class="menu__titre">PLATS</h3>
-     <hr/>
-     <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-        <div class="card-Menu__body">
-          <h4 class="card__h4">Coquilles Saint-Jacques</h4>
-          <div class="row justify-content__between">
-            <p class="card-Menu__p">Accompagnées d'une purée de panais</p>
-            <span class="card-Menu__price">40€</span>
-          </div>
-        </div>
-        <div class="rotate">
-          <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-        </div>
-     </div>
-     <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-      <div class="card-Menu__body">
-        <h4 class="card__h4">Magret de canard </h4>
-        <div class="row justify-content__between">
-          <p class="card-Menu__p">Et parmentier de pommes de terres</p>
-          <span class="card-Menu__price">35€</span>
-        </div>
-      </div>
-      <div class="rotate">
-        <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-      </div>
-     </div>
-     <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-    <div class="card-Menu__body">
-      <h4 class="card__h4">Pigeonneau d'Ille-et-Vilaine </h4>
-      <div class="row justify-content__between">
-        <p class="card-Menu__p">Sur sont lit de gnocchis aux légumes </p>
-        <span class="card-Menu__price">44€</span>
-      </div>
-    </div>
-    <div class="rotate">
-      <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-    </div>
-     </div>
-   </article>
-    <!------dessert-->
-   <article class="card-Menu--anim-2">
-     <h3 class="menu__titre">DESSERT</h3>
-     <hr/>
-     <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-        <div class="card-Menu__body">
-          <h4 class="card__h4">Pétales de violettes glacés</h4>
-          <div class="row justify-content__between">
-            <p class="card-Menu__p">Et purée de noisettes</p>
-            <span class="card-Menu__price">18€</span>
-          </div>
-        </div>
-        <div class="rotate">
-          <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-        </div>
-     </div>
-     <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-      <div class="card-Menu__body">
-        <h4 class="card__h4">Fondant au chocolat </h4>
-        <div class="row justify-content__between">
-          <p class="card-Menu__p">Révisité</p>
-          <span class="card-Menu__price">22€</span>
-        </div>
-      </div>
-      <div class="rotate">
-        <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-      </div>
-     </div>
-     <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
-    <div class="card-Menu__body">
-      <h4 class="card__h4">Millefeuille croustillant</h4>
-      <div class="row justify-content__between">
-        <p class="card-Menu__p">Myrtilles est pate d'amande</p>
-        <span class="card-Menu__price">23€</span>
-      </div>
-    </div>
-    <div class="rotate">
-      <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
-    </div>
-     </div>
-    </article>
-  </div>
-  </section> 
-  <button class="header__btn btn--modif ">Commander</button>
-  <footer class="footer">
-    <img src="public/images/logo/ohmyfood@2x.svg" alt="logo" class="footer__img"/>
-    <ul>
-      <li class="row">
-        <div class="footer__picto"><i class="fas fa-utensils "></i></div>
-        Suggest a restaurant
-      </li>
-      <li class="row">
-        <div class="footer__picto"><i class="fas fa-hands-helping"></i></div>
-        Become a restaurant
-      </li>
-      <li>Legal</li>
-      <li>Contact</li>
-    </ul>
-  </footer>
-</body>
+<html lang="fr">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="public/css/style.css">
+        <title>ohmyfood</title>
+        <script src="https://kit.fontawesome.com/a41e9403cf.js" crossorigin="anonymous"></script>
+    </head>
+    <body class=container-menu> 
+        <header class="header">
+            <div class="row justify-content__center">
+                <a href="https://aholouchristopher.github.io/Ohmyfood_Project-3_11112021/" style="display: flex; align-items: center; position:relative; left:-58px"><i class="fas fa-arrow-left"></i></a> 
+                <img src="public/images/logo/ohmyfood.png" alt="logo" class="header__img"/>
+            </div>
+            <img src="public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="plat restaurant" style="width: 100%; height: 250px ;object-fit: cover;"/>
+        </header>
+        <section class="menu">
+            <div class="card card--modif row justify-content__between">
+                <h2 class="menu__h2">A la francaise </h2>
+                <div class="testanimation">
+                    <div class="card__picto row justify-content__center"><i class=" far fa-heart"></i></div>
+                    <div class="picto2 row justify-content__center"><i class="fas fa-heart"></i></div>
+                </div>
+            </div>
+        <!---entrée-->
+            <div class="plat-menu">
+                <article style class="card-Menu--anim-0">
+                    <h3 class="menu__titre">ENTREES</h3>
+                    <hr/>
+                    <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+                        <div class="card-Menu__body">
+                            <h4 class="card__h4">Tartare de poulpe acidulé </h4>
+                            <div class="row justify-content__between">
+                                <p class="card-Menu__p">Aux zests d'orange </p>
+                                <span class="card-Menu__price">25€</span>
+                            </div>
+                        </div>
+                        <div class="rotate">
+                            <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+                        </div>
+                    </div>
+                    <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+                        <div class="card-Menu__body">
+                            <h4 class="card__h4">Velouté de légumes d'antan</h4>
+                            <div class="row justify-content__between">
+                                <p class="card-Menu__p">Carotte, panais, topinambour </p>
+                                <span class="card-Menu__price">35€</span>
+                            </div>
+                        </div>
+                        <div class="rotate">
+                            <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+                        </div>
+                    </div>
+                    <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+                        <div class="card-Menu__body">
+                            <h4 class="card__h4">Soupe à l'oignon </h4>
+                            <div class="row justify-content__between">
+                                <p class="card-Menu__p">Revisitée </p>
+                                <span class="card-Menu__price">25€</span>
+                            </div>
+                        </div>
+                        <div class="rotate">
+                            <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+                        </div>
+                    </div>
+                </article>
+        <!---------------plat-->
+                <article class="card-Menu--anim-1">
+                    <h3 class="menu__titre">PLATS</h3>
+                    <hr/>
+                    <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+                        <div class="card-Menu__body">
+                            <h4 class="card__h4">Coquilles Saint-Jacques</h4>
+                                <div class="row justify-content__between">
+                                    <p class="card-Menu__p">Accompagnées d'une purée de panais</p>
+                                    <span class="card-Menu__price">40€</span>
+                                </div>
+                        </div>
+                        <div class="rotate">
+                            <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+                        </div>
+                    </div>
+                    <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+                        <div class="card-Menu__body">
+                            <h4 class="card__h4">Magret de canard </h4>
+                            <div class="row justify-content__between">
+                                <p class="card-Menu__p">Et parmentier de pommes de terres</p>
+                                <span class="card-Menu__price">35€</span>
+                            </div>
+                        </div>
+                        <div class="rotate">
+                            <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+                        </div>
+                    </div>
+                    <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+                        <div class="card-Menu__body">
+                            <h4 class="card__h4">Pigeonneau d'Ille-et-Vilaine </h4>
+                            <div class="row justify-content__between">
+                                <p class="card-Menu__p">Sur sont lit de gnocchis aux légumes </p>
+                                <span class="card-Menu__price">44€</span>
+                            </div>
+                        </div>
+                        <div class="rotate">
+                            <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+                        </div>
+                    </div>
+                </article>
+        <!------dessert-->
+               <article class="card-Menu--anim-2">
+                    <h3 class="menu__titre">DESSERT</h3>
+                    <hr/>
+                    <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+                        <div class="card-Menu__body">
+                            <h4 class="card__h4">Pétales de violettes glacés</h4>
+                            <div class="row justify-content__between">
+                                <p class="card-Menu__p">Et purée de noisettes</p>
+                                <span class="card-Menu__price">18€</span>
+                            </div>
+                        </div>
+                        <div class="rotate">
+                            <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+                            </div>
+                    </div>
+                    <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+                        <div class="card-Menu__body">
+                            <h4 class="card__h4">Fondant au chocolat </h4>
+                            <div class="row justify-content__between">
+                                <p class="card-Menu__p">Révisité</p>
+                                <span class="card-Menu__price">22€</span>
+                            </div>
+                        </div>
+                        <div class="rotate">
+                            <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+                        </div>
+                    </div>
+                    <div style="flex-wrap: nowrap;" class="card-Menu justify-content__between">
+                        <div class="card-Menu__body">
+                            <h4 class="card__h4">Millefeuille croustillant</h4>
+                                <div class="row justify-content__between">
+                                    <p class="card-Menu__p">Myrtilles est pate d'amande</p>
+                                    <span class="card-Menu__price">23€</span>
+                                </div>
+                        </div>
+                        <div class="rotate">
+                            <span class="rotate-validate"><i class="fas fa-check-circle"></i></span>
+                        </div>
+                    </div>
+               </article>
+            </div>
+        </section> 
+        <button class="header__btn btn--modif ">Commander</button>
+        <footer class="footer">
+            <img src="public/images/logo/ohmyfood@2x.svg" alt="logo" class="footer__img"/>
+            <ul>
+              <li class="row">
+                <div class="footer__picto"><i class="fas fa-utensils "></i></div>
+                Suggest a restaurant
+              </li>
+              <li class="row">
+                <div class="footer__picto"><i class="fas fa-hands-helping"></i></div>
+                Become a restaurant
+              </li>
+              <li>Legal</li>
+              <li>Contact</li>
+            </ul>
+        </footer>
+    </body>
 </html>
